# oeis

./: .gitignore  CITATION.cff  README.md  conftest.py  contributions.yaml  pyproject.toml
bfiles/: b006672.txt  b046671.txt  b069001.txt  b316632.txt  b394445.txt  b396816.txt
docs/: SUBMISSION-HANDOFF.md  harvest-oeis.md  oeis-candidates-survey.md  oeis-contributions.md
scripts/: golomb_build_table.py  golomb_results.jsonl  render_readme.py  validate.py
sequences/A006615/: metadata.yaml  oeis-submissions.txt  reproduce.py
sequences/A006622/: metadata.yaml  reproduce.py  three-exact-values-may2026.txt
sequences/A006625/: A006625-extension-draft.txt  metadata.yaml  reproduce.py
sequences/A006672/: metadata.yaml  reproduce.py
sequences/A046671/: metadata.yaml  reproduce.py
sequences/A316632/: metadata.yaml  reproduce.py
src/: PROVENANCE.md  finite_map_stats.py  golomb_rectangles.py  graph_saturation.py  max_tail_bivariate.py  max_tail_length.py  rado_numbers.py  rainbow_schur.py  reaction_networks.py  reaction_networks_census.py  sandpile.py  schur_backtrack.py  schur_groups.py  zarankiewicz.py  zarankiewicz_backtrack.c  zarankiewicz_circulant.py  zarankiewicz_fast.c  zarankiewicz_symbreak.py
tests/: conftest.py  test_finite_map_stats.py  test_golomb_rectangles.py  test_graph_saturation.py  test_max_tail_bivariate.py  test_max_tail_length.py  test_rado_numbers.py  test_rainbow_schur.py  test_reaction_networks.py  test_reaction_networks_census.py  test_zarankiewicz.py  test_zarankiewicz_circulant.py  test_zarankiewicz_symbreak.py
(+38 files in other folders)
